change the whole file

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: Test
+name: CI
 on:
   pull_request:
     branches:
@@ -8,49 +8,34 @@ on:
       - main
 
 jobs:
-  tests:
-    name: Run tests
+  phpunit:
     runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-
-      - name: Cache composer dependencies
-        uses: actions/cache@v2
-        with:
-          path: vendor
-          key: composer-${{ hashFiles('**/composer.lock') }}
-          restore-keys: |
-            composer-
-
-      - name: Install PHP
-        uses: shivammathur/setup-php@v2
-        with:
-          php-version: 8.1
-
-      - name: Copy .env file
-        run: |
-          cp .env.example .env
-
-      - name: Generate key
-        run: |
-          php artisan key:generate
-
-      - name: Run Composer
-        run: |
-          composer install --no-interaction
-
-      - name: Run tests suite
-        run: |
-          php artisan test
-        env:
-          DB_DATABASE: test
-
+    container:
+      image: kirschbaumdevelopment/laravel-test-runner:7.3
+ 
     services:
       mysql:
-        image: mysql-8.0
+        image: mysql:5.7
         env:
-          MYSQL_ALLOW_EMPTY_PASSWORD: yes
+          MYSQL_ROOT_PASSWORD: password
           MYSQL_DATABASE: test
         ports:
-          - 3306:3306
-        options: --health-cmd="mysqladmin ping" --health-interval=5s --health-timeout=5s --health-retries=3
+          - 33306:3306
+        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
+ 
+    steps:
+    - uses: actions/checkout@v1
+      with:
+        fetch-depth: 1
+ 
+    - name: Install composer dependencies
+      run: |
+        composer install --no-scripts
+ 
+    - name: Prepare Laravel Application
+      run: |
+        cp .env.ci .env
+        php artisan key:generate
+ 
+    - name: Run Testsuite
+      run: vendor/bin/phpunit tests/
