--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,6 +27,11 @@ jobs:
     - uses: actions/checkout@v1
       with:
         fetch-depth: 1
+        
+    - name: Install PHP
+      uses: shivammathur/setup-php@2
+      with:
+        php-version: 8.1
  
     - name: Install composer dependencies
       run: |
@@ -34,7 +39,7 @@ jobs:
  
     - name: Prepare Laravel Application
       run: |
-        cp .env.ci .env
+        cp .env.example .env
         php artisan key:generate
  
     - name: Run Testsuite
