--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -39,7 +39,7 @@ jobs:
  
     - name: Prepare Laravel Application
       run: |
-        cp .env.example .env
+        cp .env.ci .env
         php artisan key:generate
  
     - name: Run Test suite
