--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,6 +32,14 @@ jobs:
       uses: shivammathur/setup-php@v2
       with:
         php-version: 8.1
+        
+    - name: Cache composer dependencies
+      uses: actions/cache@v2
+      with:
+        path: vendor
+        key: composer-${{ hashFiles('**/composer.lock') }}
+        restore-keys: |
+          composer-
  
     - name: Install composer dependencies
       run: |
