--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,21 +10,19 @@ on:
 jobs:
   phpunit:
     runs-on: ubuntu-latest
-    container:
-      image: kirschbaumdevelopment/laravel-test-runner:8.1
  
     services:
       mysql:
-        image: mysql:5.7
+        image: mysql-8.0
         env:
-          MYSQL_ROOT_PASSWORD: password
+          MYSQL_ALLOW_EMPTY_PASSWORD:yes
           MYSQL_DATABASE: test
         ports:
           - 33306:3306
         options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
  
     steps:
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@v2
       with:
         fetch-depth: 1
         
