--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -50,14 +50,9 @@ jobs:
  
     - name: Run Test suite
       run: php artisan test
-      
-    - name: 'Setup node v16'
-      uses: actions/setup-node@v3
-      with:
-        node-version: 16
-        cache: 'npm'
         
-    - name: Install and Run NPM Dependencies
-      run: |
-        npm install
-        npm run dev
+    - name: Install NPM dependencies
+      run: npm install
+      
+    - name: Compile assets
+      run: npm run dev
