--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -57,4 +57,4 @@ jobs:
     - name: Compile assets
       run: npm run dev
       env: |
-        LARAVEL_BYPASS_ENV_CHECK=1
+        LARAVEL_BYPASS_ENV_CHECK:1
