--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -63,7 +63,7 @@ jobs:
       with:
         wait-on: http://localhost
         wait-on-timeout: 180
-        start: npx cypress run
+        start: npx cypress run --headless --config baseUrl=http://localhost
     
     - name: Upload artifacts
       uses: actions/upload-artifact@master
