--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -61,9 +61,9 @@ jobs:
     - name: Run Cypress tests
       uses: cypress-io/github-action@v5.3.0
       with:
-        wait-on: http://localhost
+        wait-on: http://localhost:3000
         wait-on-timeout: 180
-        start: npx cypress run --headless --config baseUrl=http://localhost
+        start: npx cypress run --headless --config baseUrl=http://localhost:3000
     
     - name: Upload artifacts
       uses: actions/upload-artifact@master
